fix(about)smoothing collapse effect

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -47,8 +47,9 @@ justify-content: center;
 .toggleContent4 {
     max-height: 0;
     width: 70vw;
+    padding: 0;
     overflow: hidden;
-    transition: max-height 0.3s ease-in-out;
+    transition: max-height 0.5s ease-in-out, padding 0.5s ease-in-out;;
     color: #FF6060;
     background-color: #F6F6F6;
     margin: 0 0 20px 0;
@@ -60,5 +61,4 @@ justify-content: center;
 .toggleContent4.active {
     max-height: 500px;
     padding: 10px;
-    margin: 0 0 20px 0;
 }
